# crawl

./: .env.example  .gitignore  README.md  pyproject.toml
MinerU_local/: llm_aid_utils.py  local_pdf_parser.py  paper_processor.py  utils.py
src/nc_firecrawl/: __init__.py  cli.py  collector.py  config.py  firecrawl_client.py  models.py  native_client.py  nature.py  rate_limit.py  sitemap.py  sqlite_index.py  storage.py
tests/: test_collector.py  test_firecrawl_client.py  test_native_client.py  test_nature.py  test_sitemap.py  test_storage.py
